WE HAVE COMPLETED WEEK 6 ASSIGNMENT CHECKED
