# server.js
@@ -66,8 +66,10 @@ app.get('/github/callback', passport.authenticate('github', {
 
 app.use('/books', require('./routes/books')); // Route for Books CRUD operations
 app.use('/author', require('./routes/author'));
-app.use ('/task', require('./routes/task.js'))
-app.use('/user', require('./routes/user.js'))
+app.use ('/task', require('./routes/task.js'));
+app.use('/user', require('./routes/user.js'));
+app.use ('/project', require('./routes/project.js'));
+app.use ('/comment', require('./routes/comment.js'))
 
 // Handle 404 - Undefined Routes
 app.use((req, res, next) => {
